Practica 3 Kubernetes avanzado/planner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      restartPolicy: Always
      containers:
      - name: planner
        image: codeurjc/planner:v1.0
