Practica 3 Kubernetes avanzado/toposervice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      restartPolicy: Always
      containers:
      - name: toposervice
        image: codeurjc/toposervice:v1.0
        ports:
        - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: toposervice-service
  labels:
    app: toposervice
spec:
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: toposervice-port
  selector:
    app: toposervice
  type: ClusterIP
