Practica 3 Kubernetes avanzado/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: eoloplants-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000      
      - path: /toposervice(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toposervice-service
            port:
              number: 8181
