Practica 3 Kubernetes avanzado/networkpolicies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toposervice-policies
spec:
  podSelector:
    matchLabels:
      app: toposervice
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 8181
  egress:
  - ports:
    - port: 80
    - port: 443
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 8181
    - port: 27017
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weatherservice-policies
spec:
  podSelector:
    matchLabels:
      app: weatherservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: planner
    ports:
    - port: 9090
      protocol: TCP
  egress:
  - ports:
    - port: 9090
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-policy
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 3000
  - from: []
    ports:
    - protocol: TCP
      port: 80
  egress:
  - ports:
    - port: 80
    - port: 443
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 3000
    - port: 3306
    - port: 5672
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-policy
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
  - ports:
    - port: 8181
    - port: 9090
    - port: 5672
  policyTypes:
  - Egress
